data 컨테이너 구성 (데이터는 아직)

--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 {
-    template: "comment page",
+    template: "comment page", width: 800, minHeight: 300
 },
 {% endblock %}
