--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -2,22 +2,30 @@
 
 {% block content %}
 {
-    view: "datatable", width: 800, minHeight: 500,
-    scroll: false,
-    columns: [
-        {
-            id: "title", fillspace: true,
-            header: ["Title", {content: "textFilter"}]
-        },
-        {
-            id: "created", width: 100,
-            header: [ {text: "Created", rowspan: 2}]
-        }
-    ],
+    view: "list", id: "list", width: 800, minHeight: 500,
+    scroll: false, select: true,
+    url: "http://127.0.0.1:5000/database/postings",
+    template: `#id#. #title# <div style="padding-left: 18px; font-size: 13px">created on #created_short#</div>`,
+    type: {
+        height: 70
+    },
     pager: "pager"
 },
 {
-    view: "pager", id: "pager", size: 10, group: 5,
-    template: "{common.first()}{common.prev()}{common.pages()}{common.next()}{common.last()}"
+    cols: [
+        {
+            view: "pager", id: "pager", size: 10, group: 5,
+            template: "{common.first()}{common.prev()}{common.pages()}{common.next()}{common.last()}"
+        },
+        {
+            view: "button", label: "write", width: 100,
+            type: "icon", icon: "wxi-pencil"
+        },
+        {
+            view: "button", label: "write", width: 100,
+            type: "icon", icon: "wxi-trash"
+        },
+    ]
 },
+
 {% endblock %}
