--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -2,12 +2,20 @@
 
 {% block content %}
 {
-    view: "list", id: "list", width: 800, minHeight: 500,
+    view: "list", id: "boardlist", width: 800, minHeight: 500,
     scroll: false, select: true,
     url: "http://127.0.0.1:5000/database/postings",
     template: `#id#. #title# <div style="padding-left: 18px; font-size: 13px">created on #created_short#</div>`,
     type: {
         height: 70
+    },
+    click: () => {
+        var selected = $$('boardlist').getSelectedId();
+        if (selected) {
+            location.href=`/board/${selected}`;
+        } else {
+            webix.message({type: "debug", text: "Please click one more time"});
+        }
     },
     pager: "pager"
 },
