--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.css" type="text/css" charset="utf-8">
     <link rel="stylesheet" href="http://cdn.webix.com/edge/webix.css" type="text/css">
     <script src="//cdn.webix.com/edge/webix.js" type="text/javascript"></script>
+
+    <style>
+        html {
+            line-height: 25px;
+        }
+    </style>
 </head>
 
 <body>
