write 클릭하면 write 페이지로 이동 & delete 버튼 생성

--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -27,10 +27,11 @@
         },
         {
             view: "button", label: "write", width: 100,
-            type: "icon", icon: "wxi-pencil"
+            type: "icon", icon: "wxi-pencil",
+            click: () => { location.href="/board/write"; }
         },
         {
-            view: "button", label: "write", width: 100,
+            view: "button", label: "delete", width: 100,
             type: "icon", icon: "wxi-trash"
         },
     ]
