--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Smart Contract</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.css" type="text/css" charset="utf-8">
     <link rel="stylesheet" href="http://cdn.webix.com/edge/webix.css" type="text/css">
     <script src="//cdn.webix.com/edge/webix.js" type="text/javascript"></script>
 
+    <!-- for editor views -->
+    <script src="https://cdn.webix.com/components/edge/ckeditor/ckeditor.js"></script>
+    <!-- <script type="text/javascript" src="./richtext.js"></script> -->
     <style>
         html {
             line-height: 25px;
@@ -20,6 +23,9 @@
 <body>
     <script>
         webix.ready(() => {
+            {% block protoUI %}
+            {% endblock %}
+
             webix.ui({
                 view: "scrollview",
                 scroll: "y",
