write 파일 이름 변경 & 파일 내 form width, height 변경

--- a/app/templates/board_write.html
+++ b/app/templates/board_write.html
@@ -54,12 +54,11 @@ webix.protoUI({
 
 {% block content %}
 {
-    view: "form", id: "board_create",
+    view: "form", id: "board_create", width: 1000, minHeight: 650,
     elements: [
         { view: "text", label: "title", },
         { view: "text", label: "writer" },
         {
-            width: 1000, height: 600,
             cols:[
                 {
                     view:"dhx-richtext", id:"richtext",
