--- a/app/templates/board_posting.html
+++ b/app/templates/board_posting.html
@@ -2,25 +2,6 @@
 
 {% block content %}
 {
-    width: 800, minHeight: 400,
-    rows: [
-        {
-            template: "{{title}}", height: 50,
-        },
-        {
-            height: 32,
-            cols: [
-                {template: "{{created_on}}"},
-                {template: "{{writer}}"}
-            ]
-        },
-        {
-            template: "{{content}}"
-        }
-    ]
-},
-{view: "spacer", height: 5},
-{
     view: "toolbar", borderless: true,
     elements: [
         {
@@ -43,6 +24,35 @@
                 ]
             }
         }
+    ]
+},
+{
+    width: 800, minHeight: 400,
+    rows: [
+        {
+            template: "{{title}}", height: 50,
+        },
+        {
+            height: 32,
+            cols: [
+                {template: "{{created_on}}"},
+                {template: "{{writer}}"}
+            ]
+        },
+        {
+            template: "{{content}}"
+        }
+    ]
+},
+{view: "spacer", height: 20},
+{
+    view: "comments", height: 500,
+    data: [
+        {id:1, date:"2018-06-10 18:45", text:"Greetings, fellow colleagues. I would like to share my insights on this task. I reckon we should deal with at least half of the points in the plan without further delays. I suggest proceeding from one point to the next and notifying the rest of us with at least short notices. This way is best to keep track of who is doing what."},
+        {id:2, date:"2018-06-12 19:40", text:"Hi, is that you Corvo? I am sure that that's exactly what is thought best out there in Dunwall. Let's just do what we are supposed to do to get the result."},
+        {id:3, date:"2018-06-12 20:16", text:"Whoa. Corvo is right, though I must admit, he is often way too serious and lacks a good healthy sense of humour.<br>I'd also like to add that half of the points in the plan (btw who wrote it? I would like a long thoughtful conversation in person with the guy / lady in question. Maybe over a chessboard as well) Well, most of the points can be omitted if we rationally split the subtasks between all the parties and optimize the whole line of work."},
+        {id:4, date:"2018-06-14 21:57", text:"Whatever you say, guys. (And Crake, I don't like chess. Though a blithesome conversation in the cafeteria is highly appreciated)."},
+        {id:5, date:"2018-06-14 22:01", text:"There are things that you cannot solve by jumping in an X-wing and blowing something up, Daizy))) Was it you, Daisy?<br>Okay, guys, let's meet in person, discuss the finale details of the plan and let's begin at last."}
     ]
 },
 {% endblock %}
