--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,5 +88,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <!-- Scroll Event -->
+        <script>
+            window.addEventListener("scroll", function() {
+                const scrollable = document.documentElement.scrollHeight - window.innerHeight;
+                const scrolled = window.scrollY;
+
+                if (Math.ceil(scrolled) === scrollable) {
+                    alert("You've reached the bottom");
+                }
+            });
+        </script>
     </body>
 </html>
