--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -84,6 +84,8 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
         </footer>
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
@@ -95,7 +97,14 @@
                 const scrolled = window.scrollY;
 
                 if (Math.ceil(scrolled) === scrollable) {
-                    alert("You've reached the bottom");
+                    $.ajax({
+                        type: "GET",
+                        url: "../../static/repo_test.json",
+                        dataType: "json",
+                        success: function(res) {
+                            console.log(res);
+                        }
+                    });
                 }
             });
         </script>
