--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,37 +46,8 @@
         <!-- Section-->
         <section class="py-5" id="repos">
             <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    {% for i in repos %}
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            {% if repos[i].star %}
-                            <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">{{ repos[i].star }} ⭐</div>
-                            {% endif %}
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">{{ repos[i].name }}</h5>
-                                    <hr>
-                                    <!-- Product price-->
-                                    <table class="table">
-                                        <tbody>
-                                            <tr>
-                                                <td>created at</td>
-                                                <td>{{ repos[i].create_time }}</td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan=2>{{ repos[i].updated }}</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
+                <div id="card_container" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+
                 </div>
             </div>
         </section>
@@ -92,17 +63,59 @@
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
         <!-- Scroll Event -->
         <script>
+            let index = 0; // repo_1, repo_2 ...에서 1, 2 ... 나타냄
+
             window.addEventListener("scroll", function() {
                 const scrollable = document.documentElement.scrollHeight - window.innerHeight;
                 const scrolled = window.scrollY;
-
                 if (Math.ceil(scrolled) === scrollable) {
                     $.ajax({
                         type: "GET",
-                        url: "../../static/repo_test.json",
+                        url: "../../static/repo_list.json",
                         dataType: "json",
                         success: function(res) {
-                            console.log(res);
+                            const length = Object.keys(res).length; // repo 총 개수
+                            
+                            for (i = 0; i < 12; i++) { // 12개씩 loading
+                                if (index >= length) break; // 모든 repo 불러오면 더 이상 loading X
+                                console.log(`length: ${length} & index: ${index}`);
+                                /*
+                                    res: repo_list.json 파일이며 자바스크립트에선 Object
+                                    key: repo_1, repo_2 ...
+                                    repo:  { name: ..., created_at: ... }
+                                */
+                                var key = `repo_${index}`; 
+                                var repo = res[key];
+                                
+                                // #card_container에  repo 추가
+                                document.getElementById("card_container").innerHTML += `
+                                    <div class="col mb-5">
+                                        <div class="card h-100">
+                                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">${repo.star} ⭐</div>
+                                            <div class="card-body p-4">
+                                                <div class="text-center">
+                                                    <!-- Product name-->
+                                                    <h5 class="fw-bolder">${repo.name}</h5>
+                                                    <hr>
+                                                    <table class="table">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td>created at</td>
+                                                                <td>${repo.create_time}</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td colspan=2>${repo.updated}</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                `;
+                                
+                                index++;
+                            }
                         }
                     });
                 }
