perf: :children_crossing: show star when it's not null
There is a 'if' statement to find out if a repository has a star.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -103,7 +103,6 @@
                             
                             for (i = 0; i < 12; i++) { // 12개씩 loading
                                 if (index >= length) break; // 모든 repo 불러오면 더 이상 loading X
-                                console.log(`length: ${length} & index: ${index}`);
                                 /*
                                     res: repo_list.json 파일이며 자바스크립트에선 Object
                                     key: repo_1, repo_2 ...
@@ -113,7 +112,8 @@
                                 var repo = res[key];
                                 
                                 // #card_container에  repo 추가
-                                document.getElementById("card_container").innerHTML += `
+                                if (repo.star != null) {
+                                    document.getElementById("card_container").innerHTML += `
                                     <div class="col mb-5">
                                         <div class="card h-100">
                                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">${repo.star} ⭐</div>
@@ -136,7 +136,32 @@
                                             </div>
                                         </div>
                                     </div>
-                                `;
+                                    `;
+                                } else {
+                                    document.getElementById("card_container").innerHTML += `
+                                    <div class="col mb-5">
+                                        <div class="card h-100">
+                                            <div class="card-body p-4">
+                                                <div class="text-center">
+                                                    <h5 class="fw-bolder">${repo.name}</h5>
+                                                    <hr>
+                                                    <table class="table">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td>created at</td>
+                                                                <td>${repo.create_time}</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td colspan=2>${repo.updated}</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    `;
+                                }                              
                                 
                                 index++;
                             }
