--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
         <header class="bg-dark py-5" id="home">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">29,489 Repositories</h1>
+                    <h1 class="display-4 fw-bolder">{{'{:,}'.format(total)}} Repositories</h1>
                     <p class="lead fw-normal text-white-50 mb-0">We have been crawling...</p>
                 </div>
             </div>
