--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -93,7 +93,8 @@
             window.addEventListener("scroll", function() {
                 const scrollable = document.documentElement.scrollHeight - window.innerHeight;
                 const scrolled = window.scrollY;
-                if (Math.ceil(scrolled) === scrollable) {
+                console.log(`scrollable: ${scrollable}, scrolled: ${scrolled}`);
+                if (Math.ceil(scrolled) >= scrollable) {
                     $.ajax({
                         type: "GET",
                         url: "../../static/repo_list.json",
