--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,7 +48,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Repository name (No implementation)" aria-label="Repository name" aria-describedby="button-search">
+                        <input id="input-search" type="text" class="form-control" placeholder="Repository name (No implementation)" aria-label="Repository name" aria-describedby="button-search" onkeyup="search()">
                         <button class="btn btn-outline-secondary" type="button" id="button-search">Search</button>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                             {% endif %}
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">{{ repos[i].name }}</h5>
+                                    <h5 class="fw-bolder repo-name">{{ repos[i].name }}</h5>
                                     <hr>
                                     <table class="table">
                                         <tbody>
@@ -92,6 +92,21 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <!-- Search function -->
+        <script>
+            function search() {
+                const target_name = document.getElementById("input-search").value.toLowerCase();
+                const repo_names = document.getElementsByClassName("repo-name");
+                console.log(repo_names);
+                for (var i = 0; i < repo_names.length; i++) {
+                    if (repo_names[i].innerHTML.toLowerCase().includes(target_name)) {
+                        repo_names[i].parentNode.parentNode.parentNode.style.display = "flex";
+                    } else {
+                        repo_names[i].parentNode.parentNode.parentNode.style.display = "none";
+                    }
+                }
+            }
+        </script>
         <!-- Scroll Event -->
         <script>
             let index = 12; // repo_1, repo_2 ...에서 1, 2 ... 나타냄
@@ -131,7 +146,7 @@
                                 content += `
                                             <div class="card-body p-4">
                                                 <div class="text-center">
-                                                    <h5 class="fw-bolder">${repo.name}</h5>
+                                                    <h5 class="fw-bolder repo-name">${repo.name}</h5>
                                                     <hr>
                                                     <table class="table">
                                                         <tbody>
