--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,10 +25,9 @@
                         <li class="nav-item"><a class="nav-link" href="#repos">Repositories</a></li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Sign in
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">!</span>
+                        <input type="text" class="form-control" placeholder="Repository name" aria-label="Repository name" aria-describedby="button-search2">
+                        <button class="btn btn-outline-secondary" type="submit" id="button-search2">
+                            <i class="bi bi-search me-1"></i>
                         </button>
                     </form>
                 </div>
