feat: 검색 후 정렬 시 검색어도 GET으로 보냄
search 변수가 None이 아닐 경우 hidden input으로 검색어를 추가함으로써 정렬 선택 시 검색어도 함께 GET으로 보내지도록 함.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,18 +60,27 @@
                             <li>
                                 <form class="dropdown-item" method="GET">
                                     <input type="hidden" value="created_at" name="sortedBy">
+                                    {% if search != None %}
+                                    <input type="hidden" value="{{ search }}" name="search">
+                                    {% endif %}
                                     <button type="submit" class="btn btn-light">Newly Created</button>
                                 </form>
                             </li>
                             <li>
                                 <form class="dropdown-item" method="GET">
                                     <input type="hidden" value="star" name="sortedBy">
+                                    {% if search != None %}
+                                    <input type="hidden" value="{{ search }}" name="search">
+                                    {% endif %}
                                     <button type="submit" class="btn btn-light">Most Stars</button>
                                 </form>
                             </li>
                             <li>
                                 <form class="dropdown-item" method="GET">
                                     <input type="hidden" value="name" name="sortedBy">
+                                    {% if search != None %}
+                                    <input type="hidden" value="{{ search }}" name="search">
+                                    {% endif %}
                                     <button type="submit" class="btn btn-light">Names Ascending</button>
                                 </form>
                             </li>
