style: :lipstick: change button's color and text

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,7 +60,7 @@
                             <button type="submit" class="btn btn-dark mx-2">Download Current Repositories</button>
                         </form>
                         <!-- Download Button -->
-                        <button type="button" class="btn btn-light mx-2" onclick="download()">Download Selected Repos</button>
+                        <button type="button" class="btn btn-outline-secondary mx-2" onclick="download()">Download Selected Repositories</button>
                         <script>
                             function download() {
                                 const name_download = document.getElementsByName("download"); // name='download'인 Element 모두 가져오기
